--- a/.github/workflows/daily_post.yml
+++ b/.github/workflows/daily_post.yml
@@ -7,9 +7,9 @@
 
 name: Test Run (Every 5 Mins)
 on:
-  # schedule:
-  #   # '*/5 * * * *' means "Run every 5 minutes"
-  #   - cron: '*/5 * * * *'
+  schedule:
+    # '*/5 * * * *' means "Run every 5 minutes"
+    - cron: '*/5 * * * *'
   workflow_dispatch: # Keep this so you can button-click it too  
 
 permissions:
@@ -39,8 +39,8 @@ jobs:
 
       - name: Save History to Repo
         run: |
-          git config --global user.name 'ViralBot'
-          git config --global user.email 'bot@noreply.github.com'
+          git config --global user.name 'rohanvinkare'
+          git config --global user.email 'rohanvinkare2022@gmail.com'
           git add history.json
           # Only commit if file changed
           git diff --quiet && git diff --staged --quiet || (git commit -m "Update history log [skip ci]" && git push)
