--- a/.github/workflows/daily_post.yml
+++ b/.github/workflows/daily_post.yml
@@ -28,7 +28,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install Libraries
-        run: pip install requests feedparser google-genai beautifulsoup4
+        run: pip install requests feedparser google-generativeai beautifulsoup4
 
       - name: Run Viral Bot
         env:
@@ -39,8 +39,8 @@ jobs:
 
       - name: Save History to Repo
         run: |
-          git config --global user.name 'rohanvinkare'
-          git config --global user.email 'rohanvinkare2022@gmail.com'
+          git config --global user.name 'ViralBot'
+          git config --global user.email 'bot@noreply.github.com'
           git add history.json
           # Only commit if file changed
           git diff --quiet && git diff --staged --quiet || (git commit -m "Update history log [skip ci]" && git push)
