--- a/.github/workflows/daily_post.yml
+++ b/.github/workflows/daily_post.yml
@@ -1,46 +1,46 @@
-# name: Daily Tech Post
+# # name: Daily Tech Post
+# # on:
+# #   schedule:
+# #     # Runs at 09:30 AM IST (04:00 UTC)
+# #     - cron: '0 4 * * *'
+# #   workflow_dispatch:
+
+# name: Test Run (Every 5 Mins)
 # on:
 #   schedule:
-#     # Runs at 09:30 AM IST (04:00 UTC)
-#     - cron: '0 4 * * *'
-#   workflow_dispatch:
+#     # '*/5 * * * *' means "Run every 5 minutes"
+#     - cron: '*/5 * * * *'
+#   workflow_dispatch: # Keep this so you can button-click it too  
 
-name: Test Run (Every 5 Mins)
-on:
-  schedule:
-    # '*/5 * * * *' means "Run every 5 minutes"
-    - cron: '*/5 * * * *'
-  workflow_dispatch: # Keep this so you can button-click it too  
-
-permissions:
-  contents: write # REQUIRED: Allows bot to update history.json
+# permissions:
+#   contents: write # REQUIRED: Allows bot to update history.json
   
-jobs:
-  run-bot:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+# jobs:
+#   run-bot:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+#       - name: Setup Python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: '3.10'
 
-      - name: Install Libraries
-        run: pip install requests feedparser google-generativeai beautifulsoup4
+#       - name: Install Libraries
+#         run: pip install requests feedparser google-generativeai beautifulsoup4
 
-      - name: Run Viral Bot
-        env:
-          LINKEDIN_TOKEN: ${{ secrets.LINKEDIN_TOKEN }}
-          LINKEDIN_URN: ${{ secrets.LINKEDIN_URN }}
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        run: python viral_bot.py
+#       - name: Run Viral Bot
+#         env:
+#           LINKEDIN_TOKEN: ${{ secrets.LINKEDIN_TOKEN }}
+#           LINKEDIN_URN: ${{ secrets.LINKEDIN_URN }}
+#           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+#         run: python viral_bot.py
 
-      - name: Save History to Repo
-        run: |
-          git config --global user.name 'ViralBot'
-          git config --global user.email 'bot@noreply.github.com'
-          git add history.json
-          # Only commit if file changed
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update history log [skip ci]" && git push)
+#       - name: Save History to Repo
+#         run: |
+#           git config --global user.name 'ViralBot'
+#           git config --global user.email 'bot@noreply.github.com'
+#           git add history.json
+#           # Only commit if file changed
+#           git diff --quiet && git diff --staged --quiet || (git commit -m "Update history log [skip ci]" && git push)
